# U-RealFormer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  urealformer.py
.github/ISSUE_TEMPLATE/: arch_proposal.md  bug_report.md
.github/workflows/: ci.yml
benchmarks/: glue.py  memory_profile.py  squad_v2.py  triton_attn_bench.py
docs/: DESIGN_SPEC_ARCH030.md  architecture.md
experiments/: ablation_alpha.py  bench_depth48.py  bench_structured.py  bench_wikitext.py  bench_wikitext103.py  hallucination_gap.py  jacobian_audit.py  prove_residual.py  skip_k_sweep.py
kernels/: Cargo.toml
kernels/src/: lib.rs
realformer_evo/: attention.py  config.py  low_rank.py  training.py
tests/: test_attention.py  test_causal.py  test_detach_roadmap.py  test_hallucination_gap.py  test_memory.py  test_triton_kernels.py
u_realformer/: __init__.py  attention.py  config.py  decoder.py  encoder.py  training.py  triton_kernels.py
